Fix for Windows build script.

--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -1,9 +1,9 @@
 env:
     QT_VERSION: '5.15.0'
-    QT_ARCH: 'win64_mingw73'
-    MINGW_DIR: ${{ github.workspace }}/../Qt/Tools/mingw730_64
+    QT_ARCH: 'win64_mingw81'
+    MINGW_DIR: ${{ github.workspace }}/../Qt/Tools/mingw810_64
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
-    MINGW_URL: https://download.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_mingw/qt.tools.win64_mingw730/7.3.0-1x86_64-7.3.0-release-posix-seh-rt_v5-rev0.7z
+    MINGW_URL: https://download.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_mingw/qt.tools.win64_mingw810/8.1.0-1-202004170606x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
     DEPS_URL: https://www.dropbox.com/s/9ulp1w82826966i/win64_deps.zip?dl=1
 
 name: Windows release build
