#3409 Fix for black lines when switching from Fusion Dark to Vista style

--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -83,6 +83,7 @@ jobs:
               run: |
                 rm -f *.a
                 rm -f plugins/*.a
+                rm -f styles/*.a
 
             - name: Prepare portable distro (Qt)
               shell: bash
