--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -39,13 +39,22 @@ jobs:
 
             - name: Install SQLite3
               run: |
-                wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-autoconf-$SQLITE_VERSION.tar.gz
-                tar xzf sqlite-autoconf-$SQLITE_VERSION.tar.gz
-                cd sqlite-autoconf-$SQLITE_VERSION
-                ./configure --enable-fts5 --enable-json1 --enable-session
-                make
-                sudo make install
-                sqlite3 --version
+                wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-amalgamation-$SQLITE_VERSION.zip
+                unzip sqlite-amalgamation-$SQLITE_VERSION.zip
+                cd sqlite-amalgamation-$SQLITE_VERSION
+                gcc sqlite3.c -lpthread -ldl -lm -Os -fpic -shared -o libsqlite3.so \
+                    -DSQLITE_ENABLE_UPDATE_DELETE_LIMIT \
+                    -DSQLITE_ENABLE_DBSTAT_VTAB \
+                    -DSQLITE_ENABLE_COLUMN_METADATA \
+                    -DSQLITE_ENABLE_EXPLAIN_COMMENTS \
+                    -DSQLITE_ENABLE_FTS3 \
+                    -DSQLITE_ENABLE_FTS4 \
+                    -DSQLITE_ENABLE_FTS5 \
+                    -DSQLITE_ENABLE_GEOPOLY \
+                    -DSQLITE_ENABLE_JSON1 \
+                    -DSQLITE_ENABLE_RTREE
+                strip libsqlite3.so
+                sudo cp libsqlite3.so /usr/local/lib/
             
             - name: Install Tcl
               run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
