--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -1,6 +1,6 @@
 env:
     QT_VERSION: '5.15.0'
-    SQLITE_VERSION: '3310100'
+    SQLITE_VERSION: '3340000'
     SQLITE_RELEASE_YEAR: '2020'
     TCL_VERSION: '8.6'
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
@@ -37,11 +37,14 @@ jobs:
               with:
                 ref: ${{ github.event.client_payload.branch }}
 
-            - name: Install SQLite3
+            - name: Get SQLite3
               run: |
                 wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-amalgamation-$SQLITE_VERSION.zip
                 unzip sqlite-amalgamation-$SQLITE_VERSION.zip
-                cd sqlite-amalgamation-$SQLITE_VERSION
+
+            - name: Install SQLite3
+              dir: '${{ github.workspace }}/sqlite-amalgamation-$SQLITE_VERSION'
+              run: |
                 gcc sqlite3.c -lpthread -ldl -lm -Os -fpic -shared -o libsqlite3.so \
                     -DSQLITE_ENABLE_UPDATE_DELETE_LIMIT \
                     -DSQLITE_ENABLE_DBSTAT_VTAB \
