--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -1,7 +1,7 @@
 env:
     QT_VERSION: '5.15.0'
     QT_ARCH: 'win64_mingw81'
-    SQLITE_VERSION: '3310100'
+    SQLITE_VERSION: '3340000'
     SQLITE_RELEASE_YEAR: '2020'
     MINGW_DIR: ${{ github.workspace }}/../Qt/Tools/mingw810_64
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
@@ -42,7 +42,7 @@ jobs:
               run: |
                 curl -L ${{ env.MINGW_URL }} --output ../mingw.7z
                 7z x -o"${{ github.workspace }}/../Qt" ../mingw.7z
-                echo "::add-path::${{ env.MINGW_DIR }}/bin"
+                echo "${{ env.MINGW_DIR }}/bin" >> $GITHUB_PATH
  
             - name: Clone repo
               uses: actions/checkout@v2
@@ -54,7 +54,7 @@ jobs:
               run: |
                 curl -L ${{ env.DEPS_URL }} --output ../win64_deps.zip
                 7z x -o".." ../win64_deps.zip
-                echo "::add-path::${{ github.workspace }}/../lib"
+                echo "${{ github.workspace }}/../lib" >> $GITHUB_PATH
  
             - name: Install SQLite3
               shell: bash
