--- a/.github/workflows/lin_release.yml
+++ b/.github/workflows/lin_release.yml
@@ -23,19 +23,19 @@ jobs:
                 path: ${{ github.workspace }}/../Qt
                 key: ${{ runner.os }}-Qt-Linux-Cache
                 
-#            - name: Install Qt
-#              uses: jurplel/install-qt-action@v2
-#              with:
-#                cached: ${{ steps.cache-qt.outputs.cache-hit }}
-#                version: ${{ env.QT_VERSION }}
-#                host: 'linux'
-#                dir: '${{ github.workspace }}/..'
-#                modules: 'qtscript'
+            - name: Install Qt
+              uses: jurplel/install-qt-action@v2
+              with:
+                cached: ${{ steps.cache-qt.outputs.cache-hit }}
+                version: ${{ env.QT_VERSION }}
+                host: 'linux'
+                dir: '${{ github.workspace }}/..'
+                modules: 'qtscript'
                 
-#            - name: Clone repo
-#              uses: actions/checkout@v2
-#              with:
-#                ref: ${{ github.event.client_payload.branch }}
+            - name: Clone repo
+              uses: actions/checkout@v2
+              with:
+                ref: ${{ github.event.client_payload.branch }}
 
             - name: Install SQLite3
               run: |
