--- a/.github/workflows/mac_release.yml
+++ b/.github/workflows/mac_release.yml
@@ -1,5 +1,5 @@
 env:
-    QT_VERSION: '5.15.0'
+    QT_VERSION: '5.15.2'
     SQLITE_VERSION: '3340000'
     SQLITE_RELEASE_YEAR: '2020'
     TCL_VERSION: '8.6'
@@ -63,6 +63,7 @@ jobs:
                     -DSQLITE_ENABLE_RTREE
                 sudo cp libsqlite3.0.dylib /usr/local/lib/
                 sudo ln -f -s /usr/local/lib/libsqlite3.0.dylib /usr/local/lib/libsqlite3.dylib
+                sudo cp *.h /usr/local/include/
 
             - name: Prepare deps
               run: |
