--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -1,5 +1,5 @@
 env:
-    QT_VERSION: '5.15.0'
+    QT_VERSION: '5.15.2'
     QT_ARCH: 'win64_mingw81'
     SQLITE_VERSION: '3340000'
     SQLITE_RELEASE_YEAR: '2020'
@@ -33,7 +33,7 @@ jobs:
                 version: ${{ env.QT_VERSION }}
                 host: 'windows'
                 arch: ${{ env.QT_ARCH }}
-                dir: '${{ github.workspace }}\..'
+                dir: '${{ github.workspace }}/../'
                 modules: 'qtscript'
                 
             - name: Install mingw
