Updated github actions in attempt to fix build.

--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -92,13 +92,13 @@ jobs:
             - name: Compile SQLiteStudio3
               working-directory: output/build
               run: |
-                qmake.exe CONFIG+=portable ..\..\SQLiteStudio3
+                ${{ env.Qt5_Dir }}/bin/qmake.exe CONFIG+=portable ..\..\SQLiteStudio3
                 mingw32-make.exe -j 2
             
             - name: Compile Plugins
               working-directory: output/build/Plugins
               run: |
-                qmake.exe CONFIG+=portable ..\..\..\Plugins
+                ${{ env.Qt5_Dir }}/bin/qmake.exe CONFIG+=portable ..\..\..\Plugins
                 mingw32-make.exe -j 2
               
             - name: Prepare portable dir
