Updated github actions in attempt to fix build.

--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -34,7 +34,7 @@ jobs:
                 version: ${{ env.QT_VERSION }}
                 host: 'windows'
                 arch: ${{ env.QT_ARCH }}
-                dir: '../'
+                dir: '${{ github.workspace }}/../'
                 modules: 'qtscript'
                 
             - name: Fix Qt path
