Updated github actions in attempt to fix build.

--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -34,8 +34,9 @@ jobs:
                 version: ${{ env.QT_VERSION }}
                 host: 'windows'
                 arch: ${{ env.QT_ARCH }}
-                dir: '/'
+                dir: '${{ github.workspace }}/../'
                 modules: 'qtscript'
+                setup-python: 'false'
                 
             - name: Fix Qt path
               run: |
