--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -5,7 +5,7 @@ env:
     SQLITE_RELEASE_YEAR: '2020'
     MINGW_DIR: ../Qt/Tools/mingw810_64
     QT_BIN_DIR: ../Qt/5.15.2/mingw81_64/bin
-    PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
+    PORTABLE_DIR: ${{ env.GITHUB_WORKSPACE }}/output/portable/SQLiteStudio
     MINGW_URL: https://download.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_mingw/qt.tools.win64_mingw810/8.1.0-1-202004170606x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
     DEPS_URL: https://www.dropbox.com/s/9ulp1w82826966i/win64_deps.zip?dl=1
 
@@ -154,10 +154,7 @@ jobs:
             - name: Assemble portable package
               shell: bash
               working-directory: ${{ env.PORTABLE_DIR }}/..
-              run: |
-                7z a -r sqlitestudio-$SQLITESTUDIO_VERSION.zip SQLiteStudio
-                pwd
-                ls -l
+              run: 7z a -r sqlitestudio-$SQLITESTUDIO_VERSION.zip SQLiteStudio
 
             - name: Upload package artifact
               uses: actions/upload-artifact@v1
