--- a/.github/workflows/win_release.yml
+++ b/.github/workflows/win_release.yml
@@ -5,7 +5,7 @@ env:
     SQLITE_RELEASE_YEAR: '2020'
     MINGW_DIR: ../Qt/Tools/mingw810_64
     QT_BIN_DIR: ../Qt/5.15.2/mingw81_64/bin
-    #PORTABLE_DIR: ${{ env.GITHUB_WORKSPACE }}/output/portable/SQLiteStudio
+    PORTABLE_DIR: output/portable/SQLiteStudio
     MINGW_URL: https://download.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_mingw/qt.tools.win64_mingw810/8.1.0-1-202004170606x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
     DEPS_URL: https://www.dropbox.com/s/9ulp1w82826966i/win64_deps.zip?dl=1
 
@@ -103,66 +103,50 @@ jobs:
               run: |
                 mkdir portable
                 cp -R SQLiteStudio portable/
-                echo "PORTABLE_DIR=`pwd`/portable/SQLiteStudio" >> $GITHUB_ENV
-                echo "The dir: ${{ env.PORTABLE_DIR }}"
-
-            - name: Prepare portable dir2
-              shell: bash
-              run: |
-                echo "The dir: ${{ env.PORTABLE_DIR }}"
-                echo "The dir: $PORTABLE_DIR"
 
             - name: Clean-up portable dir
               shell: bash
-              working-directory: ${{ env.PORTABLE_DIR }}
               run: |
+                cd ${{ env.PORTABLE_DIR }}
                 rm -f *.a
                 rm -f plugins/*.a
                 rm -f styles/*.a
-
-            - name: temp1
-              shell: bash
-              working-directory: ${{ env.Qt5_Dir }}
-              run: |
-                ls -l bin
-                
-            - name: temp1
-              shell: bash
-              working-directory: ${{ env.Qt5_Dir }}
-              run: |
-                ls -l ${{ env.PORTABLE_DIR }}
+                echo "ABSOLUTE_PORTABLE_DIR=`pwd`" >> $GITHUB_ENV
 
             - name: Prepare portable distro (Qt)
               shell: bash
               working-directory: ${{ env.Qt5_Dir }}
               run: |
-                for f in Qt5Core Qt5Gui Qt5Network Qt5PrintSupport Qt5Script Qt5Svg Qt5Widgets Qt5Xml libgcc_s_seh-1 libstdc++-6 libwinpthread-1; do cp bin/$f.dll "${{ env.PORTABLE_DIR }}"; done
-                cp bin/qt.conf "${{ env.PORTABLE_DIR }}"
-                mkdir -p "${{ env.PORTABLE_DIR }}/iconengines"
-                mkdir -p "${{ env.PORTABLE_DIR }}/platforms"
-                mkdir -p "${{ env.PORTABLE_DIR }}/printsupport"
-                mkdir -p "${{ env.PORTABLE_DIR }}/styles"
-                mkdir -p "${{ env.PORTABLE_DIR }}/imageformats"
-                cp plugins/iconengines/qsvgicon.dll "${{ env.PORTABLE_DIR }}/iconengines"
-                cp plugins/platforms/qwindows.dll "${{ env.PORTABLE_DIR }}/platforms"
-                cp plugins/styles/qwindowsvistastyle.dll "${{ env.PORTABLE_DIR }}/styles"
-                cp plugins/printsupport/windowsprintersupport.dll "${{ env.PORTABLE_DIR }}/printsupport"
-                for f in qgif qicns qico qjpeg qsvg qtga qtiff qwbmp; do cp plugins/imageformats/$f.dll "${{ env.PORTABLE_DIR }}/imageformats"; done
+                for f in Qt5Core Qt5Gui Qt5Network Qt5PrintSupport Qt5Script Qt5Svg Qt5Widgets Qt5Xml libgcc_s_seh-1 libstdc++-6 libwinpthread-1; do cp bin/$f.dll "$ABSOLUTE_PORTABLE_DIR"; done
+                cp bin/qt.conf "$ABSOLUTE_PORTABLE_DIR"
+                mkdir -p "$ABSOLUTE_PORTABLE_DIR/iconengines"
+                mkdir -p "$ABSOLUTE_PORTABLE_DIR/platforms"
+                mkdir -p "$ABSOLUTE_PORTABLE_DIR/printsupport"
+                mkdir -p "$ABSOLUTE_PORTABLE_DIR/styles"
+                mkdir -p "$ABSOLUTE_PORTABLE_DIR/imageformats"
+                cp plugins/iconengines/qsvgicon.dll "$ABSOLUTE_PORTABLE_DIR/iconengines"
+                cp plugins/platforms/qwindows.dll "$ABSOLUTE_PORTABLE_DIR/platforms"
+                cp plugins/styles/qwindowsvistastyle.dll "$ABSOLUTE_PORTABLE_DIR/styles"
+                cp plugins/printsupport/windowsprintersupport.dll "$ABSOLUTE_PORTABLE_DIR/printsupport"
+                for f in qgif qicns qico qjpeg qsvg qtga qtiff qwbmp; do cp plugins/imageformats/$f.dll "$ABSOLUTE_PORTABLE_DIR/imageformats"; done
 
             - name: Prepare portable distro (Deps)
               shell: bash
-              working-directory: ../lib
-              run: cp *.dll "${{ env.PORTABLE_DIR }}"
+              run: |
+                cd ../lib
+                cp *.dll "$ABSOLUTE_PORTABLE_DIR"
 
             - name: Determine SQLiteStudio version
               shell: bash
-              working-directory: ${{ env.PORTABLE_DIR }}
-              run: echo "SQLITESTUDIO_VERSION=$(./sqlitestudiocli.exe --version | cut -f 2 -d ' ')" >> $GITHUB_ENV
+              run: |
+                cd $ABSOLUTE_PORTABLE_DIR
+                echo "SQLITESTUDIO_VERSION=$(./sqlitestudiocli.exe --version | cut -f 2 -d ' ')" >> $GITHUB_ENV
 
             - name: Assemble portable package
               shell: bash
-              working-directory: ${{ env.PORTABLE_DIR }}/..
-              run: 7z a -r sqlitestudio-$SQLITESTUDIO_VERSION.zip SQLiteStudio
+              run: |
+                cd $ABSOLUTE_PORTABLE_DIR/..
+                7z a -r sqlitestudio-$SQLITESTUDIO_VERSION.zip SQLiteStudio
 
             - name: Upload package artifact
               uses: actions/upload-artifact@v1
