--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
 
         strategy:
             matrix:
-                QT_VERSION: [${{ env.OLD_QT_VERSION }}, ${{ env.NEW_QT_VERSION }}]
+                QT_VERSION: ['5.9.9', '5.15.2']
 
         steps:
             - name: Cache Qt
